<resources>
    <string name="app_name">K2-AFG</string>
    <string name="Header1">Details</string>
    <string name="nameHeader">Name:</string>
    <string name="nameBox" />
    <string name="addressHeader">Address:</string>
    <string name="addressBox" />
    <string name="websiteHeader">Website:</string>
    <string name="websiteBox" />
    <string name="phoneHeader">Phone:</string>
    <string name="phoneBox" />
    <string name="specificHeader">Specifics:</string>
    <string name="specificBox" />
    <string name="manbuttonhint">Click here if you are an user</string>
    <string name="shelterbuttonhint">Click here if you are a shelter</string>
    <string name="pantrybuttonhint">Click here if you are a food pantry</string>
    <string name="welcome">Welcome</string>
    <string name="sheltersbuttontext">For Shelters</string>
    <string name="pantrybuttontext">For Pantries</string>
    <string name="manbuttontext">For Users</string>
    <string name="search">Search here for shelter</string>
    <string name="vacancyText">Vacancy:</string>
    <string name="vacancyDescription">Please enter vacancy description </string>
    <string name="shelterName">Name: </string>
    <string name="shelterNameText">Please enter shelter name</string>
    <string name="webText">Please enter website</string>
    <string name="addressText">Please enter address</string>
    <string name="phoneText">Please enter phone number</string>
    <string name="specificText">Please enter any specifications</string>
    <string name="shelterInfo">Shelter Information</string>
    <string name="pantryInfo">Pantry Information</string>
    <string name="pantryNameText">Please enter pantry name</string>
    <string name="foodType">Description:</string>
    <string name="foodTypeText">Please enter food offered</string>
    <string name="applyFilter">Apply Filter</string>
    <string name="searchImage">search image</string>
    <string name="filterShelterNameTxt">Shelter by Name</string>
    <string name="filterShelterDistanceTxt">Shelter by Distance</string>
    <string name="filterShelterVacancyTxt">Shelter by Vacancy</string>
    <string name="filterPantryNameTxt">Pantries by Name</string>
    <string name="filterPantryDistanceTxt">Pantries by Distance</string>
    <string name="pantry">Pantries</string>
    <string name="vacancy">Vacancy</string>
    <string name="shelterV">Search Shelters by Vacancy</string>
    <string name="addShelter">Add New Shelter</string>
    <string name="addPantry">Add New Pantry</string>
    <string name="editShelter">Edit</string>
    <string name="submitChanges">Submit Changes</string>
    <string name="backStr">Back</string>
    <string name="submit">Submit</string>
    <string name="food">Food:</string>
    <string name="distance">Distance: </string>
    <string name="pantryName">Pantry Name: </string>
    <string name="shelterNameName">Shelter Name: </string>
    <string name="shelterVacancy">Vacancy: </string>




</resources>
