<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    app:layout_constrainedWidth="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="188dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/Header1"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameHeader"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:fontFamily="@font/abel"
        android:text="@string/nameHeader"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <TextView
        android:id="@+id/nameBox"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abel"
        android:text="@string/nameBox"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/addressHeader"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="317dp"
        android:layout_marginBottom="542dp"
        android:fontFamily="@font/abel"
        android:text="@string/addressHeader"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/addressBox"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/abel"
        android:text="@string/addressBox"
        android:textAlignment="viewEnd"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="@+id/editAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/websiteHeader"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="490dp"
        android:fontFamily="@font/abel"
        android:text="@string/websiteHeader"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressHeader"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/websiteBox"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/abel"
        android:text="@string/websiteBox"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="@+id/editWebsite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/phoneHeader"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="437dp"
        android:fontFamily="@font/abel"
        android:text="@string/phoneHeader"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/websiteHeader"
        app:layout_constraintVertical_bias="0.182" />

    <TextView
        android:id="@+id/phoneBox"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="288dp"
        android:fontFamily="@font/abel"
        android:text="@string/phoneBox"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editPhone"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/specificHeader"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abel"
        android:text="@string/food"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneHeader" />

    <TextView
        android:id="@+id/specificBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/abel"
        android:text="@string/specificBox"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editSpecifics"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="540dp"
        android:text="@string/editShelter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:text="@string/submitChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="160dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editWebsite"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="232dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSpecifics"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="364dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="292dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>